--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -2,23 +2,28 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
 <GridPane alignment="center" gridLinesVisible="false" hgap="10" minHeight="600.0" minWidth="400.0" prefHeight="600.0" prefWidth="406.0" vgap="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainController">
     <children>
         <TextField fx:id="searchbox" promptText="Search" GridPane.columnSpan="2" GridPane.rowIndex="1" />
         <Label text="Tours" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-        <Button defaultButton="true" text="Search" GridPane.columnIndex="2" GridPane.rowIndex="1">Save</Button>
+        <Button defaultButton="true" onAction="#search" text="Search" GridPane.columnIndex="2" GridPane.rowIndex="1">Save</Button>
       <MenuBar GridPane.columnSpan="3">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+                <MenuItem mnemonicParsing="false" text="New Tour" />
+                <MenuItem mnemonicParsing="false" text="Import Tour" />
+                <MenuItem mnemonicParsing="false" text="Export Tour" />
+                <MenuItem mnemonicParsing="false" text="Close" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
             <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
+                <MenuItem mnemonicParsing="false" text="Edit Tour" />
+                <MenuItem mnemonicParsing="false" text="Delete Tour" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
@@ -30,7 +35,7 @@
       </MenuBar>
       <ListView fx:id="tourlist" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3" GridPane.rowSpan="4" />
       <Label fx:id="tourtitle" text="Tourtitle" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <Button mnemonicParsing="false" text="Edit" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+      <Button mnemonicParsing="false" onAction="#edit" text="Edit" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
       <GridPane GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -55,19 +60,25 @@
         <tabs>
           <Tab text="Beschreibung">
             <content>
-              <AnchorPane fx:id="descri" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane fx:id="descri" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Label fx:id="description" layoutX="14.0" layoutY="14.0" text="Label" />
+                     </children></AnchorPane>
             </content>
           </Tab>
           <Tab text="Bild">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="27.0" layoutY="-9.0" pickOnBounds="true" preserveRatio="true" />
+                     </children></AnchorPane>
             </content>
           </Tab>
         </tabs>
       </TabPane>
       <Label text="Logs" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <Button mnemonicParsing="false" text="+" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-      <Button mnemonicParsing="false" text="-" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
+      <Button mnemonicParsing="false" onAction="#addLog" text="+" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+      <Button maxWidth="29.0" minWidth="29.0" mnemonicParsing="false" onAction="#deleteLog" prefWidth="29.0" text="-" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
       <TableView fx:id="logs" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="6">
         <columns>
           <TableColumn fx:id="date" prefWidth="75.0" text="Date" />
