--- a/src/tourplanner/views/main.fxml
+++ b/src/tourplanner/views/main.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane alignment="TOP_CENTER" hgap="10" minHeight="400.0" minWidth="500.0" prefHeight="400.0" prefWidth="500.0" vgap="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane alignment="TOP_CENTER" hgap="10" minHeight="400.0" minWidth="500.0" prefHeight="400.0" prefWidth="500.0" vgap="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tourplanner.views.Controller">
    <columnConstraints>
       <ColumnConstraints />
       <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" minWidth="300.0" prefWidth="300.0" />
