--- a/src/tourplanner/views/sample.fxml
+++ b/src/tourplanner/views/sample.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane alignment="center" gridLinesVisible="false" hgap="10" minHeight="600.0" minWidth="400.0" prefHeight="600.0" prefWidth="406.0" vgap="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainController">
+<GridPane alignment="center" gridLinesVisible="false" hgap="10" minHeight="600.0" minWidth="400.0" prefHeight="600.0" prefWidth="406.0" vgap="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tourplanner.views.MainController">
     <children>
         <TextField fx:id="searchbox" promptText="Search" GridPane.columnSpan="2" GridPane.rowIndex="1" />
         <Label text="Tours" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
