--- a/src/tourplanner/gui/views/logForm.fxml
+++ b/src/tourplanner/gui/views/logForm.fxml
@@ -2,24 +2,33 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="395.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tourplanner.gui.controller.LogFormController">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="315.0" minWidth="10.0" prefWidth="110.0" />
+        <ColumnConstraints hgrow="NEVER" maxWidth="110.0" minWidth="10.0" prefWidth="110.0" />
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="490.0" minWidth="10.0" prefWidth="490.0" />
     </columnConstraints>
     <rowConstraints>
         <RowConstraints maxHeight="73.0" minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
         <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="140.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="140.0" vgrow="SOMETIMES" />
         <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
         <Label text="Neuen Logeintrag erstellen" GridPane.columnSpan="2">
@@ -35,7 +44,7 @@
                 <Insets right="5.0" />
             </GridPane.margin>
         </Label>
-        <Label text="Zeit" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+        <Label text="Zeit (in min)" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
             <GridPane.margin>
                 <Insets right="5.0" />
             </GridPane.margin>
@@ -45,25 +54,77 @@
                 <Insets right="5.0" />
             </GridPane.margin>
         </Label>
-        <TextField fx:id="date" GridPane.columnIndex="1" GridPane.rowIndex="1">
-            <GridPane.margin>
-                <Insets right="10.0" />
-            </GridPane.margin>
-        </TextField>
         <TextField fx:id="time" GridPane.columnIndex="1" GridPane.rowIndex="2">
             <GridPane.margin>
                 <Insets right="10.0" />
             </GridPane.margin>
         </TextField>
-        <TextField fx:id="rating" GridPane.columnIndex="1" GridPane.rowIndex="3">
+        <TextField fx:id="distance" GridPane.columnIndex="1" GridPane.rowIndex="4">
             <GridPane.margin>
                 <Insets right="10.0" />
             </GridPane.margin>
         </TextField>
-        <Button fx:id="button" defaultButton="true" disable="true" mnemonicParsing="false" onAction="#saveData" text="Erstelle" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+        <Button fx:id="button" defaultButton="true" disable="true" mnemonicParsing="false" onAction="#saveData" text="Erstelle" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="10">
             <GridPane.margin>
                 <Insets right="10.0" />
             </GridPane.margin>
         </Button>
+      <ChoiceBox fx:id="rating" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <children>
+            <DatePicker fx:id="date" />
+            <Label text="Uhrzeit" />
+            <TextField fx:id="hours" prefHeight="26.0" prefWidth="41.0" />
+            <Label text=":" />
+            <TextField fx:id="minutes" prefHeight="26.0" prefWidth="35.0" />
+         </children>
+      </HBox>
+      <Label text="Distanz (in km)" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+         <GridPane.margin>
+            <Insets right="5.0" />
+         </GridPane.margin>
+      </Label>
+      <Label text="Wetter" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+         <GridPane.margin>
+            <Insets right="5.0" />
+         </GridPane.margin>
+      </Label>
+      <Label text="Sportart" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
+         <GridPane.margin>
+            <Insets right="5.0" />
+         </GridPane.margin>
+      </Label>
+      <Label text="Schrittanzahl" GridPane.halignment="RIGHT" GridPane.rowIndex="7">
+         <GridPane.margin>
+            <Insets right="5.0" />
+         </GridPane.margin>
+      </Label>
+      <Label text="Gewicht (in kg)" GridPane.halignment="RIGHT" GridPane.rowIndex="8">
+         <GridPane.margin>
+            <Insets right="5.0" />
+         </GridPane.margin>
+      </Label>
+      <Label text="Größe (in cm)" GridPane.halignment="RIGHT" GridPane.rowIndex="9">
+         <GridPane.margin>
+            <Insets right="5.0" />
+         </GridPane.margin>
+      </Label>
+      <ChoiceBox fx:id="weather" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+      <ChoiceBox fx:id="sport" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+      <TextField fx:id="steps" GridPane.columnIndex="1" GridPane.rowIndex="7">
+         <GridPane.margin>
+            <Insets right="10.0" />
+         </GridPane.margin>
+      </TextField>
+      <TextField fx:id="weight" GridPane.columnIndex="1" GridPane.rowIndex="8">
+         <GridPane.margin>
+            <Insets right="10.0" />
+         </GridPane.margin>
+      </TextField>
+      <TextField fx:id="height" GridPane.columnIndex="1" GridPane.rowIndex="9">
+         <GridPane.margin>
+            <Insets right="10.0" />
+         </GridPane.margin>
+      </TextField>
     </children>
 </GridPane>
