--- a/src/main/resources/views/MainWindow.fxml
+++ b/src/main/resources/views/MainWindow.fxml
@@ -1,28 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="550.0" minWidth="600.0" prefHeight="550.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tourplanner.gui.controller.MainController">
+<AnchorPane fx:id="anchorpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="550.0" minWidth="600.0" prefHeight="550.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tourplanner.gui.controller.MainController">
    <children>
       <MenuBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
@@ -48,7 +32,7 @@
           </Menu>
         </menus>
       </MenuBar>
-      <HBox alignment="CENTER_RIGHT" layoutY="29.0" maxHeight="42.0" minHeight="42.0" prefHeight="42.0" prefWidth="600.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
+      <HBox fx:id="hbox" alignment="CENTER_RIGHT" layoutY="29.0" maxHeight="42.0" minHeight="42.0" prefHeight="42.0" prefWidth="600.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
          <children>
             <TextField fx:id="searchbox" promptText="Search" HBox.hgrow="ALWAYS" />
             <Button defaultButton="true" mnemonicParsing="false" onAction="#search" text="Search" HBox.hgrow="NEVER">
@@ -58,11 +42,11 @@
             </Button>
          </children>
       </HBox>
-      <SplitPane dividerPositions="0.2608695652173913" layoutY="71.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="71.0">
+      <SplitPane fx:id="splitpane" dividerPositions="0.2608695652173913" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="71.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="150.0" prefHeight="160.0" prefWidth="100.0" HBox.hgrow="SOMETIMES">
                <children>
-                  <HBox alignment="CENTER_RIGHT" layoutX="-1.0" prefHeight="42.0" prefWidth="198.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                  <HBox fx:id="hboxtourbar" alignment="CENTER_RIGHT" layoutX="-1.0" prefHeight="42.0" prefWidth="198.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                      <children>
                         <Label minWidth="30.0" text="Tours" />
                         <Region prefHeight="42.0" prefWidth="18.0" HBox.hgrow="ALWAYS" />
@@ -76,7 +60,7 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="300.0" prefHeight="160.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
                <children>
-                  <HBox alignment="CENTER_RIGHT" prefHeight="42.0" prefWidth="438.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <HBox fx:id="hboxtourname" alignment="CENTER_RIGHT" prefHeight="42.0" prefWidth="438.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <Label fx:id="tourtitle" prefHeight="25.0" prefWidth="312.0" text="Tourname" HBox.hgrow="NEVER">
                            <font>
@@ -87,7 +71,7 @@
                         <Button mnemonicParsing="false" onAction="#deleteTour" text="Delete" HBox.hgrow="NEVER" />
                      </children>
                   </HBox>
-                  <GridPane layoutY="42.0" maxHeight="60.0" minHeight="60.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                  <GridPane fx:id="gridpanedata" layoutY="42.0" maxHeight="60.0" minHeight="60.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -107,7 +91,7 @@
                         <Label fx:id="distance" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
-                  <SplitPane dividerPositions="0.5" layoutY="102.0" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="102.0">
+                  <SplitPane fx:id="splitpanetour" dividerPositions="0.5" layoutY="102.0" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="102.0">
                     <items>
                       <AnchorPane minHeight="160.0" minWidth="0.0" prefHeight="143.0" prefWidth="436.0">
                            <children>
@@ -137,7 +121,7 @@
                         </AnchorPane>
                       <AnchorPane minHeight="140.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                            <children>
-                              <HBox alignment="CENTER_RIGHT" maxHeight="26.0" minHeight="26.0" prefHeight="26.0" prefWidth="436.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <HBox fx:id="hboxlog" alignment="CENTER_RIGHT" maxHeight="26.0" minHeight="26.0" prefHeight="26.0" prefWidth="436.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <children>
                                     <Label minWidth="30.0" prefHeight="16.0" prefWidth="186.0" text="Logs" HBox.hgrow="NEVER" />
                                     <Region minWidth="0.0" prefHeight="26.0" prefWidth="296.0" HBox.hgrow="ALWAYS" />
@@ -167,4 +151,7 @@
         </items>
       </SplitPane>
    </children>
+   <rotationAxis>
+      <Point3D />
+   </rotationAxis>
 </AnchorPane>
