--- a/src/main/resources/views/MainWindow.fxml
+++ b/src/main/resources/views/MainWindow.fxml
@@ -14,7 +14,8 @@
             <items>
                   <MenuItem mnemonicParsing="false" onAction="#importFile" text="Import" />
               <MenuItem mnemonicParsing="false" onAction="#export" text="Export" />
-                  <MenuItem mnemonicParsing="false" onAction="#print" text="Print" />
+                  <MenuItem mnemonicParsing="false" onAction="#print" text="Tour-Report" />
+                  <MenuItem mnemonicParsing="false" onAction="#summarize" text="Summarize-Report" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
