--- a/src/main/resources/views/MainWindow.fxml
+++ b/src/main/resources/views/MainWindow.fxml
@@ -6,153 +6,16 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="anchorpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="550.0" minWidth="600.0" prefHeight="550.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tourplanner.gui.controller.MainController">
-   <children>
-      <MenuBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-                  <MenuItem mnemonicParsing="false" onAction="#importFile" text="Import" />
-              <MenuItem mnemonicParsing="false" onAction="#export" text="Export" />
-                  <MenuItem mnemonicParsing="false" onAction="#print" text="Tour-Report" />
-                  <MenuItem mnemonicParsing="false" onAction="#summarize" text="Summarize-Report" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-                  <MenuItem mnemonicParsing="false" onAction="#newTour" text="New Tour" />
-                  <MenuItem mnemonicParsing="false" onAction="#updateTour" text="Edit Tour" />
-              <MenuItem mnemonicParsing="false" onAction="#deleteTour" text="Delete Tour" />
-                  <MenuItem mnemonicParsing="false" onAction="#addLog" text="Add Log" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-      <HBox fx:id="hbox" alignment="CENTER_RIGHT" layoutY="29.0" maxHeight="42.0" minHeight="42.0" prefHeight="42.0" prefWidth="600.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
-         <children>
-            <TextField fx:id="searchbox" promptText="Search" HBox.hgrow="ALWAYS" />
-            <Button defaultButton="true" mnemonicParsing="false" onAction="#search" text="Search" HBox.hgrow="NEVER">
-               <HBox.margin>
-                  <Insets />
-               </HBox.margin>
-            </Button>
-         </children>
-      </HBox>
-      <SplitPane fx:id="splitpane" dividerPositions="0.2608695652173913" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="71.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="150.0" prefHeight="160.0" prefWidth="100.0" HBox.hgrow="SOMETIMES">
-               <children>
-                  <HBox fx:id="hboxtourbar" alignment="CENTER_RIGHT" layoutX="-1.0" prefHeight="42.0" prefWidth="198.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                     <children>
-                        <Label minWidth="30.0" text="Tours" />
-                        <Region prefHeight="42.0" prefWidth="18.0" HBox.hgrow="ALWAYS" />
-                        <Button mnemonicParsing="false" onAction="#newTour" text="+" />
-                        <Button minWidth="29.0" mnemonicParsing="false" onAction="#deleteTour" text="-" />
-                        <Button mnemonicParsing="false" onAction="#updateTour" text="[]" />
-                     </children>
-                  </HBox>
-                  <ListView fx:id="tourlist" layoutX="-48.0" layoutY="42.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="42.0" />
-               </children>
-            </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="300.0" prefHeight="160.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
-               <children>
-                  <HBox fx:id="hboxtourname" alignment="CENTER_RIGHT" prefHeight="42.0" prefWidth="438.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <Label fx:id="tourtitle" prefHeight="25.0" prefWidth="312.0" text="Tourname" HBox.hgrow="NEVER">
-                           <font>
-                              <Font size="20.0" />
-                           </font></Label>
-                        <Region prefHeight="42.0" prefWidth="23.0" HBox.hgrow="ALWAYS" />
-                        <Button minWidth="40.0" mnemonicParsing="false" onAction="#updateTour" text="Edit" HBox.hgrow="NEVER" />
-                        <Button mnemonicParsing="false" onAction="#deleteTour" text="Delete" HBox.hgrow="NEVER" />
-                     </children>
-                  </HBox>
-                  <GridPane fx:id="gridpanedata" layoutY="42.0" maxHeight="60.0" minHeight="60.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Label text="von" />
-                        <Label fx:id="start" text="Label" GridPane.columnIndex="1" />
-                        <Label text="bis" GridPane.columnIndex="2" />
-                        <Label fx:id="finish" text="Label" GridPane.columnIndex="3" />
-                        <Label text="Distanz" GridPane.rowIndex="1" />
-                        <Label fx:id="distance" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                     </children>
-                  </GridPane>
-                  <SplitPane fx:id="splitpanetour" dividerPositions="0.5" layoutY="102.0" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="102.0">
-                    <items>
-                      <AnchorPane minHeight="160.0" minWidth="0.0" prefHeight="143.0" prefWidth="436.0">
-                           <children>
-                              <TabPane layoutX="18.0" layoutY="-58.0" prefHeight="108.0" prefWidth="436.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                <tabs>
-                                  <Tab text="Beschreibung">
-                                    <content>
-                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                             <children>
-                                                <Label fx:id="description" layoutX="14.0" layoutY="14.0" text="Beschreibung" />
-                                             </children>
-                                          </AnchorPane>
-                                    </content>
-                                  </Tab>
-                                  <Tab text="Bild">
-                                    <content>
-                                      <AnchorPane fx:id="imagepane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                             <children>
-                                                <ImageView fx:id="image" fitHeight="800.0" fitWidth="1200.0" layoutX="-14.0" layoutY="-37.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                             </children>
-                                          </AnchorPane>
-                                    </content>
-                                  </Tab>
-                                </tabs>
-                              </TabPane>
-                           </children>
-                        </AnchorPane>
-                      <AnchorPane minHeight="140.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-                           <children>
-                              <HBox fx:id="hboxlog" alignment="CENTER_RIGHT" maxHeight="26.0" minHeight="26.0" prefHeight="26.0" prefWidth="436.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <children>
-                                    <Label minWidth="30.0" prefHeight="16.0" prefWidth="186.0" text="Logs" HBox.hgrow="NEVER" />
-                                    <Region minWidth="0.0" prefHeight="26.0" prefWidth="296.0" HBox.hgrow="ALWAYS" />
-                                    <Button fx:id="addLog" mnemonicParsing="false" onAction="#addLog" text="+" HBox.hgrow="NEVER" />
-                                    <Button fx:id="deleteLog" minWidth="29.0" mnemonicParsing="false" onAction="#deleteLog" text="-" HBox.hgrow="NEVER" />
-                                    <Button mnemonicParsing="false" onAction="#updateLog" text="[]" HBox.hgrow="NEVER" />
-                                 </children>
-                              </HBox>
-                              <TableView fx:id="logs" layoutY="26.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="26.0">
-                                <columns>
-                                  <TableColumn fx:id="date" prefWidth="75.0" text="Date" />
-                                  <TableColumn fx:id="time" prefWidth="95.0" text="Total time" />
-                                    <TableColumn fx:id="rating" prefWidth="55.0" text="Rating" />
-                                    <TableColumn fx:id="weather" prefWidth="75.0" text="Wetter" />
-                                    <TableColumn fx:id="sport" prefWidth="75.0" text="Sport" />
-                                    <TableColumn fx:id="steps" prefWidth="75.0" text="Schritte" />
-                                    <TableColumn fx:id="weight" prefWidth="75.0" text="Gewicht" />
-                                    <TableColumn fx:id="height" prefWidth="75.0" text="Größe" />
-                                </columns>
-                              </TableView>
-                           </children>
-                        </AnchorPane>
-                    </items>
-                  </SplitPane>
-               </children>
-            </AnchorPane>
-        </items>
-      </SplitPane>
-   </children>
-   <rotationAxis>
-      <Point3D />
-   </rotationAxis>
+<AnchorPane fx:id="anchorpane" minHeight="550.0" minWidth="600.0"
+            prefHeight="550.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="tourplanner.gui.controller.MainController">
+    <fx:include fx:id="menuBar" source="mainwindow/MenuBar.fxml"/>
+    <fx:include fx:id="searchBar" source="mainwindow/SearchBar.fxml" AnchorPane.leftAnchor="5.0"
+                AnchorPane.rightAnchor="5.0"/>
+    <SplitPane fx:id="splitpane" dividerPositions="0.2608695652173913" prefHeight="400.0" prefWidth="600.0"
+               AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+               AnchorPane.topAnchor="71.0">
+        <fx:include fx:id="tourList" source="mainwindow/TourList.fxml"/>
+        <fx:include fx:id="tourDetails" source="mainwindow/TourDetails.fxml"/>
+    </SplitPane>
 </AnchorPane>
