--- a/TourPlannerInJava.GUI/src/main/resources/views/mainwindow/TourDetails.fxml
+++ b/TourPlannerInJava.GUI/src/main/resources/views/mainwindow/TourDetails.fxml
@@ -1,22 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane minWidth="300.0" prefHeight="160.0" prefWidth="100.0" HBox.hgrow="ALWAYS" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.technikum.gui.controller.mainwindow.TourDetailsController">
+<AnchorPane minWidth="300.0" prefHeight="160.0" prefWidth="100.0" HBox.hgrow="ALWAYS" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.technikum.gui.controller.mainwindow.TourDetailsController">
     <HBox fx:id="hboxtourname" alignment="CENTER_RIGHT" prefHeight="42.0" prefWidth="438.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <Label fx:id="tourtitle" prefHeight="25.0" prefWidth="312.0" text="Tourname" HBox.hgrow="NEVER">
+        <Label fx:id="tourtitle" prefHeight="25.0" prefWidth="312.0" text="Tourname" HBox.hgrow="ALWAYS">
             <font>
                 <Font size="20.0" />
             </font>
